added Razor Pay option

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PASSWORD=123456
 PORT=4000
 SESSION_SECRET=e1f4b9d7c3a2$%F8G9a0h6J2k@3Lp5
 GMAIL_APP_PASSWORD=dmiy wrpa jjoo fvuc
+RAZORPAY_ID_KEY="rzp_test_3aIOQlQc4egRLE"
+RAZORPAY_SECRET_KEY="QCRmX0Aj6K45ZZ3SnGL2qQvO"
