--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "You only need one",
   "main": " OneCart/app.js",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon app.js node --trace-warnings ..",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,9 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.0",
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "express-flash": "^0.0.2",
@@ -23,6 +25,7 @@
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
